[project]
name = "comfyui-nanoruby"
version = "1.0"
description = "NanoGPT API nodes for ComfyUI — chat, video generation, and TTS by rubyatmidnight"
authors = [
    {name = "rubyatmidnight"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["comfyui", "ai", "nodes", "custom-nodes", "api", "nano-gpt", "tts", "video", "chat"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://feli.fyi"
Repository = "https://github.com/rubyatmidnight/comfyui-nanoruby"
Issues = "https://github.com/rubyatmidnight/comfyui-nanoruby/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
